<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimaryDark"
        >
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_meme_toolbar"
            style="@style/Toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:navigationIcon="@drawable/ic_close"
            />

    <LinearLayout
            android:id="@+id/add_meme_layout"
            app:layout_constraintTop_toBottomOf="@id/add_meme_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            >

        <EditText
                android:id="@+id/add_meme_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="@dimen/textSize_great_24"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:background="@null"
                android:importantForAutofill="no"
                android:textColor="?android:attr/textColor"
                />

        <EditText
                android:id="@+id/add_meme_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_medium_14"
                android:hint="@string/text"
                android:inputType="text"
                android:background="@null"
                android:importantForAutofill="no"
                android:textColor="?android:attr/textColor"
                />
    </LinearLayout>
    <ImageView
            android:id="@+id/add_meme_image_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meme_layout"
            android:contentDescription="@string/memeImage"
            />

    <ImageView
            android:id="@+id/add_meme_attach_iv"
            android:layout_width="38dp"
            android:layout_height="38dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/attach"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rect"
            android:src="@drawable/ic_attach"
            android:padding="7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>